--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,56 +4,69 @@
 @string{aps = {American Physical Society,}}
 
 @inproceedings{han2020comparison,
+  abbr        = {ICSSA},
   title={Comparison of various interpolation techniques to infer localization of audio files using ENF signals},
   author={Han, Hyekyung and Lee, KangHoon and Jeon, Youngbae and Yoon, Ji Won},
-  booktitle={2020 International Conference on Software Security and Assurance (ICSSA)},
+  booktitle={2020 International Conference on Software Security and Assurance},
   pages={46--51},
   year={2020},
+  doi={10.1109/ICSSA51305.2020.00015},
   organization={IEEE}
 }
 
 @inproceedings{lee2021efficient,
+  abbr        = {WISA},
   title={Efficient adaptation of TFHE for high end-to-end throughput},
   author={Lee, Kang Hoon and Yoon, Ji Won},
   booktitle={International Conference on Information Security Applications},
   pages={144--156},
   year={2021},
+  doi={10.1007/978-3-030-89432-0_12}
   organization={Springer}
 }
 
 @inproceedings{lee2023discretization,
+  abbr        = {IACR PKC},
   title={Discretization error reduction for high precision torus fully homomorphic encryption},
   author={Lee, Kang Hoon and Yoon, Ji Won},
   booktitle={IACR International Conference on Public-Key Cryptography},
   pages={33--62},
   year={2023},
+  doi={10.1007/978-3-031-31371-4_2},
+  code={https://github.com/Stirling75/Extended-BootStrapping},
   organization={Springer}
 }
 
 @inproceedings{ahn2023cheap,
+  abbr        = {ESORICS},
   title={Cheap and fast iterative matrix inverse in encrypted domain},
   author={Ahn, Tae Min and Lee, Kang Hoon and Yoo, Joon Soo and Yoon, Ji Won},
   booktitle={European Symposium on Research in Computer Security},
   pages={334--352},
   year={2023},
+  doi={10.1007/978-3-031-50594-2_17},
   organization={Springer}
 }
 
 @inproceedings{lee2024faster,
+  abbr        = {EuroS&P},
   title={Faster Homomorphic DFT and Speech Analysis for Torus Fully Homomorphic Encryption},
   author={Lee, Kang Hoon and Jeon, YoungBae and Yoon, Ji Won},
   booktitle={2024 IEEE 9th European Symposium on Security and Privacy (EuroS\&P)},
   pages={486--505},
   year={2024},
+  code={https://github.com/Stirling75/QFT},
   organization={IEEE}
 }
 
 @inproceedings{yoo2024fast,
+  abbr        = {AVSS},
   title={Fast private location-based information retrieval over the torus},
   author={Yoo, Joon Soo and Hong, Mi Yeon and Heo, Ji Won and Lee, Kang Hoon and Yoon, Ji Won},
   booktitle={2024 IEEE International Conference on Advanced Video and Signal Based Surveillance (AVSS)},
   pages={1--7},
   year={2024},
+  doi={10.1109/EuroSP60621.2024.00033},
   organization={IEEE}
 }
 
@@ -62,18 +75,22 @@
   author={Hong, Mi Yeon and Lee, Kang Hoon and Jung, Ji Hyuk and Yoon, Ji Won},
   journal={Computational and Structural Biotechnology Journal},
   year={2025},
+  doi={10.1016/j.csbj.2025.10.042},
   publisher={Elsevier}
 }
 
 @article{Lee_Yoon_2026, 
-title={Homomorphic Field Trace Revisited : Breaking the Cubic Noise Barrier}, 
-volume={2026}, 
-url={https://tches.iacr.org/index.php/TCHES/article/view/12669}, 
-DOI={10.46586/tches.v2026.i1.105-134},  
-number={1}, 
-journal={IACR Transactions on Cryptographic Hardware and Embedded Systems}, 
-author={Lee, Kang Hoon and Yoon, Ji Won}, 
-year={2026}, 
-month={Jan.}, 
-pages={105–134} 
+  abbr        = {TCHES},
+  title={Homomorphic Field Trace Revisited : Breaking the Cubic Noise Barrier}, 
+  volume={2026}, 
+  url={https://tches.iacr.org/index.php/TCHES/article/view/12669}, 
+  DOI={10.46586/tches.v2026.i1.105-134},  
+  number={1}, 
+  journal={IACR Transactions on Cryptographic Hardware and Embedded Systems}, 
+  author={Lee, Kang Hoon and Yoon, Ji Won}, 
+  year={2026}, 
+  month={Jan.},
+  doi={https://doi.org/10.46586/tches.v2026.i1.105-134},
+  code={https://github.com/Stirling75/RevHomTrace},
+  pages={105–134} 
 }
