--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
   pages={46--51},
   year={2020},
   doi={10.1109/ICSSA51305.2020.00015},
-  organization={IEEE}
+  organization={IEEE},
 }
 
 @inproceedings{lee2021efficient,
@@ -21,8 +21,8 @@
   booktitle={International Conference on Information Security Applications},
   pages={144--156},
   year={2021},
-  doi={10.1007/978-3-030-89432-0_12}
-  organization={Springer}
+  doi={10.1007/978-3-030-89432-0_12},
+  organization={Springer},
 }
 
 @inproceedings{lee2023discretization,
@@ -34,7 +34,7 @@
   year={2023},
   doi={10.1007/978-3-031-31371-4_2},
   code={https://github.com/Stirling75/Extended-BootStrapping},
-  organization={Springer}
+  organization={Springer},
 }
 
 @inproceedings{ahn2023cheap,
@@ -45,7 +45,7 @@
   pages={334--352},
   year={2023},
   doi={10.1007/978-3-031-50594-2_17},
-  organization={Springer}
+  organization={Springer},
 }
 
 @inproceedings{lee2024faster,
@@ -56,7 +56,7 @@
   pages={486--505},
   year={2024},
   code={https://github.com/Stirling75/QFT},
-  organization={IEEE}
+  organization={IEEE},
 }
 
 @inproceedings{yoo2024fast,
@@ -76,7 +76,7 @@
   journal={Computational and Structural Biotechnology Journal},
   year={2025},
   doi={10.1016/j.csbj.2025.10.042},
-  publisher={Elsevier}
+  publisher={Elsevier},
 }
 
 @article{Lee_Yoon_2026, 
@@ -92,5 +92,5 @@
   month={Jan.},
   doi={https://doi.org/10.46586/tches.v2026.i1.105-134},
   code={https://github.com/Stirling75/RevHomTrace},
-  pages={105–134} 
+  pages={105–134},
 }
