--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -55,6 +55,7 @@
   booktitle={2024 IEEE 9th European Symposium on Security and Privacy (EuroS\&P)},
   pages={486--505},
   year={2024},
+  doi={10.1109/EuroSP60621.2024.00033},
   code={https://github.com/Stirling75/QFT},
   organization={IEEE},
 }
@@ -66,7 +67,7 @@
   booktitle={2024 IEEE International Conference on Advanced Video and Signal Based Surveillance (AVSS)},
   pages={1--7},
   year={2024},
-  doi={10.1109/EuroSP60621.2024.00033},
+  doi={10.1109/AVSS61716.2024.10672601},
   organization={IEEE}
 }
 
